# ibexicon

./: .gitignore  .prettierignore  README.md  eslint.config.js  index.html  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.eval.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts  vitest.setup.worker.ts
.github/workflows/: ci.yml  eval-smoke.yml  pages.yml
e2e/: core.spec.ts
eval/ptab/: build.ts  core.ts  fnv1a.ts
eval/ptab/__tests__/: build-parse.test.ts
eval/results/: latest.csv  latest.json  run-20250823-190609-c2d0912.csv  run-20250823-190609-c2d0912.json  run-20250823-192229-c9feb90.csv  run-20250823-192229-c9feb90.json  run-20250823-202004-35ebeac.csv  run-20250823-202004-35ebeac.json  run-20250824-083341-4f6f68f.csv  run-20250824-083341-4f6f68f.json  run-20250824-100241-4f6f68f.csv
eval/sim/: cli.ts  worker-entry.mjs  worker.ts
public/eval/results/: latest.json
public/wordlists/en/: en-1-priors.json  en-1.txt  en-10-priors.json  en-10.txt  (+93 more)
scripts/: add-dataset.ts  patch-wasm-import.mjs
src/: App.test.tsx  App.tsx  index.css  main.tsx
src/app/: ErrorBoundary.tsx  seed.ts  styles.css
src/policy/: bandit.ts  policies.ts
src/ptab/: parse.ts
src/solver/: analysis.ts  bitset.ts  feedback.ts  filter.ts  index.ts  pattern.ts  random.ts  scoring.ts  suggest.ts
src/telemetry/: index.ts  schema.ts
src/wasm/: feature.ts  index.ts
src/worker/: client.ts  idb.ts  lru.ts  ptabCache.ts  solver.worker.ts
wasm/ibxwasm/: Cargo.toml
wasm/ibxwasm/src/: lib.rs
(+69 files in other folders)
